--- a/exchange/templates/account/login.html
+++ b/exchange/templates/account/login.html
@@ -47,7 +47,7 @@
         {% endif %}
         <div class="form-group">
             <p><a href="{% url "forgot_username" %}">{% trans "Forgot your username?" %}</a></p>
-            <p><a href="{% url "account_password_reset" %}">{% trans "Forgot your password?" %}</a></p>
+            <p><a href="{% url "account_reset_password" %}">{% trans "Forgot your password?" %}</a></p>
         </div>
         <button type="submit" class="btn btn-primary">{% trans "Log In" %}</button>
         </form>
