--- a/exchange/themes/templates/base.html
+++ b/exchange/themes/templates/base.html
@@ -96,7 +96,7 @@
                   {% if user.is_superuser %}
                     <li role="separator" class="divider"></li>
                     <li><a href="/admin/people/profile/add/">{% trans "Add User" %}</a></li>
-                    <li><a href="{% url "account_invite_user" %}">{% trans "Invite User" %}</a></li>
+                    <li><a href="{% url "geonode.invitations:geonode-send-invite" %}">{% trans "Invite User" %}</a></li>
                     <li><a href="{% url "group_create" %}">{% trans "Create Group" %}</a></li>
                   {% endif %}
                   <li role="separator" class="divider"></li>
