--- a/exchange/templates/people/profile_detail.html
+++ b/exchange/templates/people/profile_detail.html
@@ -133,7 +133,7 @@
     <ul class="list-group">
       <li class="list-group-item"><a href="{% url "profile_edit" user.username %}"><i class="fa fa-edit"></i> {% trans "Edit profile" %}</a></li>
       {% if not GEOAXIS_ENABLED %}
-      <li class="list-group-item"><a href="{% url "account_password" %}"><i class="fa fa-lock"></i> {% trans "Change password" %}</a></li>
+      <li class="list-group-item"><a href="{% url "account_change_password" %}"><i class="fa fa-lock"></i> {% trans "Change password" %}</a></li>
       {% endif %}
     </ul>
     <ul class="list-group">
@@ -154,7 +154,7 @@
       {% if not REGISTRYURL and REGISTRY %}
       <li class="list-group-item"><a href="{% url "services" %}"><i class="fa fa-globe"></i> {% trans "Remote Services" %}</a></li>
       {% endif %}
-      <li class="list-group-item"><a href="{% url "account_invite_user" %}"><i class="fa fa-edit"></i> {% trans "Invite User" %}</a></li>
+      <li class="list-group-item"><a href="{% url "geonode.invitations:geonode-send-invite" %}"><i class="fa fa-edit"></i> {% trans "Invite User" %}</a></li>
       <li class="list-group-item"><a href="{{ GEOSERVER_BASE_URL }}"><i class="fa fa-gears"></i> {% trans "GeoServer" %}</a></li>
       {% endif %}
       {% if user.is_staff %}
