--- a/exchange/templates/layers/layer_detail.html
+++ b/exchange/templates/layers/layer_detail.html
@@ -21,14 +21,14 @@
   {% endif %}
 
   {% if preview == 'geoext' %}
-    {% include "layers/layer_geoext_map.html" %}
+    {% include "geoext/layers/layer_geoext_map.html" %}
   {% elif preview == 'OL3' %}
-    {% include "layers/layer_ol3_map.html" %}
+    {% include "ol/layers/layer_ol3_map.html" %}
   {% elif preview == 'react' %}
     <script type="text/javascript" src="{{ STATIC_URL}}geonode/js/utils/thumbnail.js"></script>
     {% include 'geonode-client/layer_map.html' %}
   {% else %}
-    {% include "layers/layer_leaflet_map.html" %}
+    {% include "leaflet/layers/layer_leaflet_map.html" %}
   {% endif %}
 {{ block.super }}
 {% endblock %}
@@ -208,11 +208,13 @@
       {% endif %}
       {% endblock %}
 
+      {% if DISPLAY_COMMENTS %}
       <article id="comments" class="tab-pane">
         {% with resource as obj %}
           {% include "_comments.html" %}
         {% endwith %}
       </article>
+      {% endif %}
 
       {% if GEOGIG_ENABLED and resource.link_set.geogig %}
         {% with "_geogig_layer_detail.html" as geogig_template %}
@@ -224,6 +226,7 @@
         {% endwith %}
       {% endif %}
 
+      {% if DISPLAY_RATINGS %}
       <article id="rate" class="tab-pane">
         <!-- TODO: Move this to a reusable template snippet -->
         {% if request.user.is_authenticated %}
@@ -236,6 +239,7 @@
         {% num_ratings resource as num_votes %}
         <div class="overall_rating" data-score="{{ layer_rating }}"></div> ({{num_votes}})
       </article>
+      {% endif %}
 
     </div>
 
@@ -318,14 +322,14 @@
       <div class="input-group">
           {% if resource.storeType != "remoteStore" %}
         <input type="text" class="form-control" readonly
-          value="{{ GEOSERVER_BASE_URL }}{{ resource.workspace }}/ows?service=wms&version=1.3.0&request=GetCapabilities&typename={{ resource.layer.name  }}" id="copy-input">
+          value="{{ GEOSERVER_BASE_URL }}{{ resource.workspace }}/{{ resource.layer.name  }}/ows?service=wms&version=1.3.0&request=GetCapabilities" id="copy-input">
           {% else %}
-          {% if resource.service.type == 'REST' %}
+          {% if resource.remote_service.type == 'REST_MAP' or resource.remote_service.type == 'REST_IMG' %}
           <input type="text" class="form-control" readonly
-          value="{{ resource.service.base_url}}/{{resource.alternate}}" id="copy-input">
+          value="{{ resource.remote_service.base_url}}/{{resource.alternate}}" id="copy-input">
           {% else %}
            <input type="text" class="form-control" readonly
-          value="{{ resource.service.base_url}}" id="copy-input">
+          value="{{ resource.remote_service.base_url}}" id="copy-input">
           {% endif %}
           {% endif %}
         <span class="input-group-btn">
@@ -456,7 +460,7 @@
         {% if resource.storeType != "remoteStore" %}
         <img id="thumbnail" class="thumbnail" onerror="this.src='/static/geonode/img/missing_thumb.png'" src="/thumbnails/layers/{{ resource.typename }}"/>
         {% else %}
-        <img id="thumbnail" class="thumbnail" onerror="this.src='/static/geonode/img/missing_thumb.png'" src="/thumbnails/layers/{{ resource.service_typename }}"/>
+        <img id="thumbnail" class="thumbnail" onerror="this.src='/static/geonode/img/missing_thumb.png'" src="/thumbnails/layers/{{ resource.typename }}"/>
         {% endif %}
       </li>
     <li class="list-group-item">
@@ -523,8 +527,8 @@
     {% if resource.storeType == "remoteStore" %}
     <li class="list-group-item">
             <h4>{% trans "External service layer" %}</h4>
-            <div>{% trans "Source" %}: <a href="/services/{{resource.service.id}}">{{ resource.service.title }}</a></div>
-            <div>{% trans "Type" %}: {{ resource.service.type }}</div>
+            <div>{% trans "Source" %}: <a href="/services/{{resource.remote_service.id}}">{{ resource.remote_service.title }}</a></div>
+            <div>{% trans "Type" %}: {{ resource.remote_service.type }}</div>
     </li>
     {% endif %}
 
@@ -555,6 +559,13 @@
     {% endif %}
     {% include 'rating.html' %}
     {% include 'request_download.html' %}
+    {% if DISPLAY_SOCIAL %}
+     (function() {
+       var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+       po.src = 'https://apis.google.com/js/plusone.js';
+       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+     })();
+    {% endif %}
     <script type="text/javascript">
        $("#comment_submit_btn").click(function(event) {
             $.ajax({
