--- a/exchange/templates/layers/layer_detail.html
+++ b/exchange/templates/layers/layer_detail.html
@@ -24,6 +24,8 @@
     {% include "layers/layer_geoext_map.html" %}
   {% elif preview == 'OL3' %}
     {% include "layers/layer_ol3_map.html" %}
+  {% elif preview == 'MOW' %}
+    {% include "layers/MOW_map.html" %}
   {% elif preview == 'react' %}
     <script type="text/javascript" src="{{ STATIC_URL}}geonode/js/utils/thumbnail.js"></script>
     {% include 'geonode-client/layer_map.html' %}
@@ -45,7 +47,7 @@
   <div class="col-md-8">
 
     <div id="embedded_map" class="mrg-btm">
-      <div id="preview_map"></div>
+      <div id="preview_map" style="height: 600px; border: 1px solid black;"></div>
     </div>
 
     <div class="layer-actions">
