--- a/exchange/templates/layers/layer_detail.html
+++ b/exchange/templates/layers/layer_detail.html
@@ -47,9 +47,19 @@
   <div class="col-md-8">
 
     <div id="embedded_map" class="mrg-btm">
-      <div id="preview_map" style="height: 600px; border: 1px solid black;"></div>
-    </div>
-
+      <div id="preview_map">
+        <div class='layerlist'>
+          <div class="layerbutton"><div id="layerselect" class="layerinfo"><i class="fa fa-ellipsis-h"></i></div>
+            <ul class="dropdown" id="layerlist">
+              <li class='layeroption' id="streetsBtn"><a class="layerinfo" href="#">Sub-1</a></li>
+              <li class='layeroption' id="imageryBtn"><a class="layerinfo" href="#">Sub-2</a></li>
+              <li class='layeroption'><a class="layerinfo" href="#">Sub-3</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <button id="imageryBtn">Test2</button>
+      
     <div class="layer-actions">
       {% include "_actions.html" %}
     </div>
