Adding comment about production urls

--- a/exchange/templates/layers/MOW_map.html
+++ b/exchange/templates/layers/MOW_map.html
@@ -1,5 +1,9 @@
 <script type="text/javascript" src="https://mapbeta.gvslabs.com/api/mow-minimal.js"></script>
 
+<!-- PRODUCTION URL -->
+<!-- <script type="text/javascript" src="http://map.nga.ic.gov/api/mow-minimal.js"></script> -->
+<!-- END PRODUCTION URL -->
+
 <script type="text/javascript">
     document.addEventListener("DOMContentLoaded", function (event) {
         var isSelected = false;
