Implemeting search by extent filter

--- a/exchange/templates/search/mow_extent_map.html
+++ b/exchange/templates/search/mow_extent_map.html
@@ -1,12 +1,16 @@
 <script type="text/javascript" src="https://mapbeta.gvslabs.com/api/mow-minimal.js"></script>
 
   <script type="text/javascript">
-      document.addEventListener("DOMContentLoaded", function (event) {
-          MoW.ready(function() {
-                  map = new MoW.Map({
-                    target: 'preview_map',
-                  });
-                  // map.setBasemap(MoW.Basemap.ID.LOW_BW_CADRG);
-              });
-          });
+      // document.addEventListener("DOMContentLoaded", function (event) {
+      //     MoW.ready(function() {
+      //             map = new MoW.Map({
+      //               target: 'preview_map',
+      //             });
+      //             var eventQueue = map.events;
+      //             eventQueue.subscribe(MoW.Events.ID.MAP_MOVE, function(event, data) {
+      //               console.log(data.boundingBox);
+      //             });
+      //             // map.setBasemap(MoW.Basemap.ID.LOW_BW_CADRG);
+      //         });
+      //     });
   </script>
