--- a/exchange/templates/search/_extent_filter.html
+++ b/exchange/templates/search/_extent_filter.html
@@ -2,7 +2,7 @@
 {% if EXTENT_FILTER_ENABLED %}
 <nav class="filter">
   <h4><a href="#" id="_extent_filter" class="toggle toggle-nav"><i class="fa fa-chevron-right"></i>{% trans "Extent" %}</a></h4>
-  <fieldset class="nav closed">
+  <fieldset class="nav open">
     <div id="preview_map" style="height: 200px; border: 1px solid black;">
     </div>
   </fieldset>
