Adding a reset extent button

--- a/exchange/templates/search/_extent_filter.html
+++ b/exchange/templates/search/_extent_filter.html
@@ -5,6 +5,7 @@
   <fieldset class="nav open">
     <div id="preview_map" style="height: 200px; border: 1px solid black;">
     </div>
+    <button id="resetMapExtent">Reset Extent Filter</button>
   </fieldset>
 </nav>
 {% endif %}
