MoW settings added

--- a/exchange/templates/layers/MOW_map.html
+++ b/exchange/templates/layers/MOW_map.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="https://mapbeta.gvslabs.com/api/mow-minimal.js"></script>
+<script type="text/javascript" src={{ MOW_URL }}></script>
 
 <!-- PRODUCTION URL -->
 <!-- <script type="text/javascript" src="http://map.nga.ic.gov/api/mow-minimal.js"></script> -->
