--- a/exchange/templates/search/mow_extent_map.html
+++ b/exchange/templates/search/mow_extent_map.html
@@ -1,1 +1,1 @@
-<script type="text/javascript" src="https://mapbeta.gvslabs.com/api/mow-minimal.js"></script>
+<script type="text/javascript" src={{ MOW_URL }}></script>
