Style clean up, comment cleanup

--- a/exchange/templates/layers/layer_detail.html
+++ b/exchange/templates/layers/layer_detail.html
@@ -47,15 +47,17 @@
   <div class="col-md-8">
 
     <div id="embedded_map" class="mrg-btm">
-      <div id="preview_map">
+      <div id="preview_map" class="details_map">
         <div class='layerlist'>
-          <div class="layerbutton"><div id="layerselect" class="layerinfo"><i class="fa fa-ellipsis-h ellipsis"></i></div>
-            <ul class="dropdown" id="layerlist">
-              <li class='layeroption' id="autoscaleBase"><a class="layerinfo" href="#">Autoscale</a></li>
-              <li class='layeroption' id="canvasgrayBase"><a class="layerinfo" href="#">Grey</a></li>
-              <li class='layeroption' id="streetsBase"><a class="layerinfo" href="#">Streets</a></li>
-            </ul>
-          </div>
+          {% if MOW_ENABLED %}
+            <div class="layerbutton"><div id="layerselect" class="layerinfo"><i class="fa fa-ellipsis-h ellipsis"></i></div>
+              <ul class="dropdown" id="layerlist">
+                <li class='layeroption' id="autoscaleBase"><a class="layerinfo" href="#">Autoscale</a></li>
+                <li class='layeroption' id="canvasgrayBase"><a class="layerinfo" href="#">Grey</a></li>
+                <li class='layeroption' id="streetsBase"><a class="layerinfo" href="#">Streets</a></li>
+              </ul>
+            </div>
+          {% endif %}
         </div>
       </div>      
     <div class="layer-actions">
