--- a/exchange/templates/layers/layer_detail.html
+++ b/exchange/templates/layers/layer_detail.html
@@ -49,15 +49,13 @@
     <div id="embedded_map" class="mrg-btm">
       <div id="preview_map" class="details_map">
         <div class='layerlist'>
-          {% if MOW_ENABLED %}
             <div class="layerbutton"><div id="layerselect" class="layerinfo"><i class="fa fa-ellipsis-h ellipsis"></i></div>
-              <ul class="dropdown" id="layerlist">
+              <ul class="mow-layer-list" id="layerlist">
                 <li class='layeroption' id="autoscaleBase"><a class="layerinfo" href="#">Autoscale</a></li>
                 <li class='layeroption' id="canvasgrayBase"><a class="layerinfo" href="#">Grey</a></li>
                 <li class='layeroption' id="streetsBase"><a class="layerinfo" href="#">Streets</a></li>
               </ul>
             </div>
-          {% endif %}
         </div>
       </div>   
     </div>
