--- a/exchange/templates/layers/MOW_map.html
+++ b/exchange/templates/layers/MOW_map.html
@@ -21,22 +21,14 @@
         extent = [];
         var overLay = null;
         var type = ''
-        {% if resource.get_tiles_url %}
-            source = {
-                'url': '{{ resource.ows_url }}',
-                'layers': ['{{ resource.typename }}'],
-                'name': '{{ resource.typename }}'
-            };
-            type = 'wms';
-            extent = '{{ resource.bbox_string }}'
-        {% elif resource.ptype == 'gxp_wmscsource' %}
+        {% if resource.ptype == 'gxp_wmscsource' %}
             source = {
                 'url': '{{ resource.ows_url }}',
                 'description': '{{ resource.typename }}',
                 'name': '{{ resource.typename }}'
             };
             type = 'wms';
-
+            extent = '{{ resource.bbox_string }}'
         {% elif resource.ptype == 'gxp_arcrestsource' %}
             source = {
                 'url': '{{ resource.ows_url }}',
