--- a/exchange/templates/layers/MOW_map.html
+++ b/exchange/templates/layers/MOW_map.html
@@ -24,7 +24,7 @@
         {% if resource.ptype == 'gxp_wmscsource' %}
             source = {
                 'url': '{{ resource.ows_url }}',
-                'description': '{{ resource.typename }}',
+                'layers': '{{ resource.typename }}',
                 'name': '{{ resource.typename }}'
             };
             type = 'wms';
