Hardening based of guidance from MoW

--- a/exchange/templates/layers/layer_detail.html
+++ b/exchange/templates/layers/layer_detail.html
@@ -48,7 +48,7 @@
 
     <div id="embedded_map" class="mrg-btm">
       <div id="preview_map" class="details_map">
-        {% if MOW_ENABLED %}
+        {% if preview == 'MOW' %}
         <div class='layerlist'>
             <div class="layerbutton"><div id="layerselect" class="layerinfo"><i class="fa fa-ellipsis-h ellipsis"></i></div>
               <ul class="mow-layer-list" id="layerlist">
