--- a/exchange/templates/layers/MOW_map.html
+++ b/exchange/templates/layers/MOW_map.html
@@ -1,5 +1,5 @@
 <script type="text/javascript" src={{ MOW_URL }}></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.17.1/ol.js" type="text/javascript"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.17.1/ol.js" type="text/javascript"></script> -->
 
 <script type="text/javascript">
     document.addEventListener("DOMContentLoaded", function (event) {
@@ -17,18 +17,17 @@
         {% else %}
         var bbox = null;
         {% endif %}
-        source = null;
-        extent = [];
-        var overLay = null;
+        var source = null;
+        var coords = null;
         var type = ''
         {% if resource.ptype == 'gxp_wmscsource' %}
             source = {
                 'url': '{{ resource.ows_url }}',
-                'layers': '{{ resource.typename }}',
+                'layers': ['{{ resource.typename }}'],
                 'name': '{{ resource.typename }}'
             };
             type = 'wms';
-            extent = '{{ resource.bbox_string }}'
+            coords = '{{ resource.bbox_string }}'
         {% elif resource.ptype == 'gxp_arcrestsource' %}
             source = {
                 'url': '{{ resource.ows_url }}',
@@ -38,23 +37,27 @@
             type = 'arcgis';
 
             var coords = '{{resource.bbox_string}}'.split(',');
-            var point1 = new ol.geom.Point([coords[0], coords[1]]);
-            point1.transform('EPSG:3857', 'EPSG:4326');
-            var point2 = new ol.geom.Point([coords[2], coords[3]]);
-            point2.transform('EPSG:3857', 'EPSG:4326');
-            extent = [...point1.getCoordinates(), ...point2.getCoordinates()];
-
         {% endif %}
         MoW.ready(function() {
                 map = new MoW.Map({target: 'preview_map'});
                 var wmsOverlay;
                 if (type === 'arcgis'){
                     wmsOverlay = MoW.Factory.createArcGISOverlay(source);
-                    map.setExtent(extent);
+
+                    // Currently MoW uses an older Openlayers library 
+                    // This technique won't work in the future with Openlayer 5
+                    if (typeof OpenLayers === 'object') {                          
+                        var point1 = new OpenLayers.Geometry.Point(coords[0], coords[1]);
+                        point1.transform('EPSG:3857', 'EPSG:4326');
+                        var point2 = new OpenLayers.Geometry.Point(coords[2], coords[3]);
+                        point2.transform('EPSG:3857', 'EPSG:4326');
+                        map.setExtent([point1.x, point1.y, point2.x, point2.y]);
+                    }
                     map.addOverlay(wmsOverlay);
                 } else if (type === 'wms'){
                     wmsOverlay = MoW.Factory.createWMSOverlay(source);
-                    map.setExtent(extent.split(','));
+                    map.addOverlay(wmsOverlay);
+                    map.setExtent(coords.split(','));
                     map.addOverlay(wmsOverlay);
                 } else {
                     var alert = new MoW.Alert(MoW.Alert.TYPE.ERROR, "Not valid layer", "Cannot connect to service");
